Add spring properties and have the done files add date suffix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 logging.level.org.apache.ftpserver.listener.nio.FtpLoggingFilter=ERROR
+
+ftp.host=localhost
+ftp.port=2221
+ftp.username=admin
+ftp.password=admin
+ftp.workingDir=target/tmp
