Update comment for users.properties file

--- a/src/main/resources/users.properties
+++ b/src/main/resources/users.properties
@@ -1,4 +1,4 @@
-# Password = admin (this is md5)
+# This file is used to set up the admin user and homedir for the FTP server
 ftpserver.user.admin.userpassword=admin
 ftpserver.user.admin.homedirectory=/tmp/ftpserver
 ftpserver.user.admin.enableflag=true
